--- a/spotify_application/pubspec.yaml
+++ b/spotify_application/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/songicon.jpeg
+    - assets/top_hits.jpeg
+    - assets/new_releases.jpeg
+    - assets/daily_mix.jpeg
+    - assets/pop.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
